[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-broadcast"
version = "0.1.0"
description = "A NoneBot plugin for broadcasting messages to multiple group chats."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["nonebot", "plugin", "broadcast", "group", "bot"]
authors = [
    { name = "f1justin", email = "f1justin@outlook.com" }
]
homepage = "https://github.com/F1Justin/nonebot-plugin-specify-broadcast"
repository = "https://github.com/F1Justin/nonebot-plugin-specify-broadcast"
documentation = "https://github.com/F1Justin/nonebot-plugin-specify-broadcast"

dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0", 
    "nonebot-plugin-apscheduler>=0.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/F1Justin/nonebot-plugin-specify-broadcast/issues"
"Source Code" = "https://github.com/F1Justin/nonebot-plugin-specify-broadcast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
